force-app/main/default/objects/Address_Change_Request__c.object
<CustomObject>
    <description>The Address Change Request object contains data required for family address change requests.</description>
    <label>Address Change Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Change Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Change Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>