force-app/main/default/objects/Address_Change_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The household account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Address Change Request</relationshipLabel>
    <relationshipName>Address_Change_Request</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>