force-app/main/default/objects/Address_Change_Request__c/fields/Date_HH_Moved__c.field-meta.xml
<CustomField>
    <fullName>Date_HH_Moved__c</fullName>
    <description>The date the household moved to the new home address.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date HH Moved</label>
    <type>Date</type>
</CustomField>