force-app/main/default/objects/Address_Change_Request__c/fields/HomeAddressChangeRequest__c.field-meta.xml
<CustomField>
    <fullName>HomeAddressChangeRequest__c</fullName>
    <description>The new home address information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Address Change Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>