force-app/main/default/objects/Address_Change_Request__c/fields/OtherAddressChangeRequest__c.field-meta.xml
<CustomField>
    <fullName>OtherAddressChangeRequest__c</fullName>
    <description>The new other address information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Address Change Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>