force-app/main/default/objects/Address_Change_Request__c/fields/TX_Name_Of_Country__c.field-meta.xml
<CustomField>
    <fullName>TX_Name_Of_Country__c</fullName>
    <description>Name of country moving to</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TX Name Of Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>