force-app/main/default/objects/Address_Change_Request__c/fields/WeAreMovingReason_Src__c.field-meta.xml
<CustomField>
    <fullName>WeAreMovingReason_Src__c</fullName>
    <description>Reason family is moving</description>
    <label>We Are Moving Reason Src</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Out of the country</fullName>
            </value>
            <value>
                <fullName>Out of the school district</fullName>
            </value>
            <value>
                <fullName>Out of the state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>